cmake_minimum_required(VERSION 3.27)
project(OOP24)

set(CMAKE_CXX_STANDARD 17)

add_executable(Call Kolokviumski/1kolokvium/Call.cpp)
add_executable(Bank Kolokviumski/1kolokvium/Bank.cpp)

add_executable(DOOMHAMMER.cpp DOOMHAMMER.cpp)

add_executable(ChocolateFactory Labs/4_nedela/ChocolateFactory.cpp)
add_executable(StudentOnline Labs/4_nedela/StudentOnline.cpp)

add_executable(zad1 Labs/6_nedela/zad1.cpp)
add_executable(zad2 Labs/6_nedela/zad2.cpp)
add_executable(zad3 Labs/6_nedela/zad3.cpp)
add_executable(zad4 Labs/6_nedela/zad4.cpp)
add_executable(zad5 Labs/6_nedela/zad5.cpp)
add_executable(zad6 Labs/6_nedela/zad6.cpp)


add_executable(Hero Labs/8_nedela/Hero.cpp)
add_executable(Athlete Labs/8_nedela/Athlete.cpp)

add_executable(zadaca1 Labs/9_nedela/zadaca1.cpp)
add_executable(zadaca2 Labs/9_nedela/zadaca2.cpp)
add_executable(zadaca3 Labs/9_nedela/zadaca3.cpp)

add_executable(SmetkaZadaca Auditoriski/10/SmetkaZadaca.cpp)
add_executable(KamionLogistika Auditoriski/10/KamionLogistika.cpp)
add_executable(BukvaFrekvencija Auditoriski/10/BukvaFrekvencija.cpp)


add_executable(Kol1 Kolokviumski/Zadaci/Kol1.cpp)
add_executable(Kolok1 Kolokviumski/Zadaci/Kolok1.cpp)
add_executable(Galerija Kolokviumski/Zadaci/Galerija.cpp)
add_executable(DatumiPovik Kolokviumski/Zadaci/DatumiPovik.cpp)
add_executable(ProductKolok.cpp Kolokviumski/Zadaci/ProductKolok.cpp)
add_executable(CallKolokvium.cpp Kolokviumski/Zadaci/CallKolokvium.cpp)
add_executable(lanska3 Kolokviumski/Zadaci/Flight.cpp)
add_executable(zadacaStefan1 Kolokviumski/Zadaci/zadacaStefan1.cpp)
add_executable(zadacaStefan2 Kolokviumski/Zadaci/zadacaStefan2.cpp)
add_executable(StefanStudentiKolokviumska Kolokviumski/Zadaci/StefanStudentKolokviumska.cpp)
add_executable(BusLine Kolokviumski/Zadaci/BusLine.cpp)
add_executable(Speaker Kolokviumski/Zadaci/Speaker.cpp)
add_executable(Parovi1 Kolokviumski/Zadaci/Parovi1.cpp)
add_executable(Parovi2 Kolokviumski/Zadaci/Parovi2.cpp)
add_executable(File Kolokviumski/Zadaci/File.cpp)
add_executable(Char Kolokviumski/Zadaci/Char.cpp)
add_executable(Transaction Kolokviumski/Zadaci/Transaction.cpp)
add_executable(Parking Kolokviumski/Zadaci/Parking.cpp)
add_executable(Fitness Kolokviumski/Zadaci/Fitness.cpp)

add_executable(DeliveryV Kolokviumski/Zadaci/DeliveryV.cpp)
add_executable(DeliveryS Kolokviumski/Zadaci/Uber.cpp)
add_executable(lanska2 Kolokviumski/Zadaci/HikingTrack.cpp)

add_executable(P1 Predavanja/P1.cpp)
add_executable(P2 Predavanja/P2.cpp)
add_executable(P2.1 Predavanja/P2.1.cpp)
add_executable(Destruktor Predavanja/Destruktor.cpp)
add_executable(Datumi Predavanja/Datumi.cpp)
add_executable(MyClass Predavanja/MyClass.cpp)
add_executable(C-DC_objekti Predavanja/C-DC_objekti.cpp)
add_executable(VgnezdenaKlasa Predavanja/VgnezdenaKlasa.cpp)
add_executable(ObjektVoObjekt Predavanja/ObjektVoObjekt.cpp)
add_executable(PrijatelFunkcii Predavanja/PrijatelFunkcii.cpp)
add_executable(Preoptovaruvanje1 Predavanja/Preoptovaruvanje1.cpp)

add_executable(String1 Predavanja/Lekcija7-String/String1.cpp)
add_executable(String2 Predavanja/Lekcija7-String/String2.cpp)
add_executable(String3 Predavanja/Lekcija7-String/String3.cpp)
add_executable(String4 Predavanja/Lekcija7-String/String4.cpp)
add_executable(String5 Predavanja/Lekcija7-String/String5.cpp)
add_executable(String6 Predavanja/Lekcija7-String/String6.cpp)
add_executable(String7 Predavanja/Lekcija7-String/String7.cpp)
add_executable(String8 Predavanja/Lekcija7-String/String8.cpp)

add_executable(Nasleduvanje1 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje1.cpp)
add_executable(Nasleduvanje2 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje2.cpp)
add_executable(Nasleduvanje3 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje3.cpp)
add_executable(Nasleduvanje4 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje4.cpp)
add_executable(Nasleduvanje5 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje5.cpp)
add_executable(Nasleduvanje6 Predavanja/Lekcija8-Nasleduvanje/Nasleduvanje6.cpp)

add_executable(Polimorfizam1 Predavanja/Lekcija9-Polimorfizam/Polimorfizam1.cpp)
add_executable(Polimorfizam2 Predavanja/Lekcija9-Polimorfizam/Polimorfizam2.cpp)
add_executable(Polimorfizam3 Predavanja/Lekcija9-Polimorfizam/Polimorfizam3.cpp)
add_executable(Polimorfizam4 Predavanja/Lekcija9-Polimorfizam/Polimorfizam4.cpp)

add_executable(Isklucoci1 Predavanja/Lekcija11-Isklucoci/Isklucoci1.cpp)


add_executable(Transakcii Labs/1_nedela/Transakcii.cpp)
add_executable(Motor Labs/1_nedela/Motor.cpp)
add_executable(Fudbaleri Labs/1_nedela/Fudbaleri.cpp)
add_executable(Student Labs/1_nedela/Student.cpp)
add_executable(Prodavnica Labs/1_nedela/Prodavnica.cpp)
add_executable(Invoice Labs/1_nedela/Invoice.cpp)
add_executable(Book Labs/1_nedela/Book.cpp)
add_executable(Vehicle Labs/1_nedela/Vehicle.cpp)
add_executable(Prosek Labs/1_nedela/Prosek.cpp)

add_executable(MobilePhone Labs/2_nedela/MobilePhone.cpp)
add_executable(Kosarka Labs/2_nedela/Kosarka.cpp)
add_executable(Drzavi Labs/2_nedela/Drzavi.cpp)
add_executable(Alien Labs/2_nedela/Alien.cpp)
add_executable(BookClass Labs/2_nedela/BookClass.cpp)
add_executable(Employee Labs/2_nedela/Employee.cpp)
add_executable(FoodProduct Labs/2_nedela/FoodProduct.cpp)
add_executable(Programmer Labs/2_nedela/Programmer.cpp)

add_executable(Gamer Labs/3_nedela/Gamer.cpp)
add_executable(Vraboten3 Labs/3_nedela/Vraboten3.cpp)
add_executable(IDVraboten Labs/3_nedela/IDVraboten.cpp)
add_executable(DrzavaTax Labs/3_nedela/DrzavaTax.cpp)

add_executable(1va Kolokviumski/1kolokviumMK/1va.cpp)
add_executable(2ra Kolokviumski/1kolokviumMK/2ra.cpp)
add_executable(3ta Kolokviumski/1kolokviumMK/3ta.cpp)
add_executable(4ta Kolokviumski/1kolokviumMK/4ta.cpp)
add_executable(5ta Kolokviumski/1kolokviumMK/5ta.cpp)
add_executable(6ta Kolokviumski/1kolokviumMK/6ta.cpp)
add_executable(7ma Kolokviumski/1kolokviumMK/7ma.cpp)
add_executable(8ma Kolokviumski/1kolokviumMK/8ma.cpp)
add_executable(9ta Kolokviumski/1kolokviumMK/9ta.cpp)
add_executable(10ta Kolokviumski/1kolokviumMK/10ta.cpp)
add_executable(11ta Kolokviumski/1kolokviumMK/11ta.cpp)
add_executable(12ta Kolokviumski/1kolokviumMK/12ta.cpp)
add_executable(13ta Kolokviumski/1kolokviumMK/13ta.cpp)
add_executable(15ta Kolokviumski/1kolokviumMK/15ta.cpp)
add_executable(14ta Kolokviumski/1kolokviumMK/14ta.cpp)
add_executable(16ta Kolokviumski/1kolokviumMK/16ta.cpp)
add_executable(17ta Kolokviumski/1kolokviumMK/17ta.cpp)
add_executable(18ta Kolokviumski/1kolokviumMK/18ta.cpp)
add_executable(19ta Kolokviumski/1kolokviumMK/19ta.cpp)
add_executable(20ta Kolokviumski/1kolokviumMK/20ta.cpp)
add_executable(21va Kolokviumski/1kolokviumMK/21va.cpp)
add_executable(22ra Kolokviumski/1kolokviumMK/22ra.cpp)

add_executable(1va-2k Kolokviumski/2kolokviumMK/1va-2k.cpp)
add_executable(2ra-2k Kolokviumski/2kolokviumMK/2ra-2k.cpp)
add_executable(3ta-2k Kolokviumski/2kolokviumMK/3ta-2k.cpp)
add_executable(4ta-2k Kolokviumski/2kolokviumMK/4ta-2k.cpp)
add_executable(5ta-2k Kolokviumski/2kolokviumMK/5ta-2k.cpp)
add_executable(6ta-2k Kolokviumski/2kolokviumMK/6ta-2k.cpp)
add_executable(7ma-2k Kolokviumski/2kolokviumMK/7ma-2k.cpp)
add_executable(8ma-2k Kolokviumski/2kolokviumMK/8ma-2k.cpp)
add_executable(9ta-2k Kolokviumski/2kolokviumMK/9ta-2k.cpp)
add_executable(10ta-2k Kolokviumski/2kolokviumMK/10ta-2k.cpp)
add_executable(11ta-2k Kolokviumski/2kolokviumMK/11ta-2k.cpp)
add_executable(12ta-2k Kolokviumski/2kolokviumMK/12ta-2k.cpp)
add_executable(13ta-2k Kolokviumski/2kolokviumMK/13ta-2k.cpp)
add_executable(14ta-2k Kolokviumski/2kolokviumMK/14ta-2k.cpp)
add_executable(15ta-2k Kolokviumski/2kolokviumMK/15ta-2k.cpp)
add_executable(16ta-2k Kolokviumski/2kolokviumMK/16ta-2k.cpp)
add_executable(17ta-2k Kolokviumski/2kolokviumMK/17ta-2k.cpp)


add_executable(1vaEN Kolokviumski/1kolokviumEN/1vaEN.cpp)
add_executable(2vaEN Kolokviumski/1kolokviumEN/2vaEN.cpp)
add_executable(8maEN Kolokviumski/1kolokviumEN/8maEN.cpp)
add_executable(11taEN Kolokviumski/1kolokviumEN/11taEN.cpp)
add_executable(13taEN Kolokviumski/1kolokviumEN/13taEN.cpp)
add_executable(14taEN Kolokviumski/1kolokviumEN/14taEN.cpp)
add_executable(17taEN Kolokviumski/1kolokviumEN/17taEN.cpp)
add_executable(18taEN Kolokviumski/1kolokviumEN/18taEN.cpp)
add_executable(20taEN Kolokviumski/1kolokviumEN/20taEN.cpp)
add_executable(24taEN Kolokviumski/1kolokviumEN/24taEN.cpp)
add_executable(25taEN Kolokviumski/1kolokviumEN/25taEN.cpp)
add_executable(28maEN Kolokviumski/1kolokviumEN/28maEN.cpp)

add_executable(Aud0 Auditoriski/1/Aud0.cpp)
add_executable(Aud1 Auditoriski/1/Aud1.cpp)
add_executable(Aud1.1 Auditoriski/1/Aud1.1.cpp)
add_executable(Aud1.2 Auditoriski/1/Aud1.2.cpp)
add_executable(Aud2 Auditoriski/1/Aud2.cpp)
add_executable(Aud3 Auditoriski/1/Aud3.cpp)
add_executable(Aud3.1 Auditoriski/1/Aud3.1.cpp)
add_executable(Aud4 Auditoriski/1/Aud4.cpp)
add_executable(Aud4.1 Auditoriski/1/Aud4.1.cpp)
add_executable(Aud5 Auditoriski/1/Aud5.cpp)
add_executable(Aud5.1 Auditoriski/1/Aud5.1.cpp)
add_executable(Aud5.2 Auditoriski/1/Aud5.2.cpp)

add_executable(Aud6.0 Auditoriski/2/Aud6.0.cpp)
add_executable(Aud7 Auditoriski/2/Aud7.cpp)
add_executable(Aud7.1 Auditoriski/2/Aud7.1.cpp)
add_executable(Aud8 Auditoriski/2/Aud8.cpp)
add_executable(Aud8.1 Auditoriski/2/Aud8.1.cpp)
add_executable(Aud9 Auditoriski/2/Aud9.cpp)

add_executable(Aud10 Auditoriski/3/Aud10.cpp)
add_executable(Aud10.1 Auditoriski/3/Aud10.1.cpp)
add_executable(Aud11 Auditoriski/3/Aud11.cpp)
add_executable(Aud12 Auditoriski/3/Aud12.cpp)
add_executable(Aud12.1 Auditoriski/3/Aud12.1.cpp)
add_executable(Slika Auditoriski/3/Slika.cpp)

add_executable(Aud13 Auditoriski/4/Aud13.cpp)
add_executable(Aud13.1 Auditoriski/4/Aud13.1.cpp)
add_executable(Aud14 Auditoriski/4/Aud14.cpp)
add_executable(Aud15 Auditoriski/4/Aud15.cpp)
add_executable(StaticPost Auditoriski/4/StaticPost.cpp)

add_executable(Aud16 Auditoriski/5/Aud16.cpp)
add_executable(Aud17 Auditoriski/5/Aud17.cpp)
add_executable(Aud18 Auditoriski/5/Aud18.cpp)
add_executable(Aud19 Auditoriski/5/Aud19.cpp)
add_executable(Vlatko1 Auditoriski/5/Vlatko1.cpp)
add_executable(Aud20 Auditoriski/5/Aud20.cpp)
add_executable(Aud21 Auditoriski/5/Aud21.cpp)
add_executable(Aud22 Auditoriski/5/Aud22.cpp)
add_executable(OperatoriStefan10 Auditoriski/5/OperatoriStefan10.cpp)
add_executable(OperatoriStefan11 Auditoriski/5/OperatoriStefan11.cpp)
add_executable(StudnentStefan Auditoriski/5/StudentStefan.cpp)
add_executable(Sentence Auditoriski/5/Sentence.cpp)
add_executable(StringBuiler Auditoriski/5/StringBuilder.cpp)

add_executable(Aud23 Auditoriski/6/Aud23.cpp)
add_executable(Aud24 Auditoriski/6/Aud24.cpp)

add_executable(Aud25 Auditoriski/7/Aud25.cpp)
add_executable(Aud26 Auditoriski/7/Aud26.cpp)

add_executable(Aud27 Auditoriski/8/Aud27.cpp)
add_executable(Aud28 Auditoriski/8/Aud28.cpp)
add_executable(Stefan1AClass Auditoriski/8/Stefan1AClass.cpp)
add_executable(Aud27Stefan Auditoriski/8/Aud27Stefan.cpp)

add_executable(Aud29 Auditoriski/9/Aud29.cpp)
add_executable(Aud30 Auditoriski/9/Aud30.cpp)
add_executable(Aud29Stefan Auditoriski/9/Aud29Stefan.cpp)
add_executable(Aud30Stefan Auditoriski/9/Aud30Stefan.cpp)
add_executable(AdapterStefan Auditoriski/9/AdapterStefan.cpp)

add_executable(VovedIsklucoci Auditoriski/10/VovedIsklucoci.cpp)
add_executable(Card Auditoriski/10/Card.cpp)
add_executable(Aud31 Auditoriski/10/Aud31.cpp)
add_executable(ShapeStefan Auditoriski/10/ShapeStefan.cpp)
add_executable(Aud32 Auditoriski/10/Aud32.cpp)
add_executable(Aud33 Auditoriski/10/Aud33.cpp)
add_executable(Citizen Auditoriski/10/Citizen.cpp)

add_executable(1 Labs/1.cpp)
add_executable(2 Labs/2.cpp)

add_executable(Wizz.cpp Predavanja/Wizz.cpp)
add_executable(Wizz2.cpp Predavanja/Wizz2.cpp)
add_executable(Wizz3.cpp Predavanja/Wizz3.cpp)

